[package]
name = "DarkRepoLauncher"
version = "1.0.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json", "__rustls"] }
serde_json = "1.0"
sysinfo = "0.29"
colored = "2.0"
sha2 = "0.11.0-pre.5"
dirs = "6.0.0"
lazy_static = "1.5.0"
winapi = { version = "0.3.9", features = ["winuser"] }
